--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 
 .left-section{
     width: 300px;
-    padding: 1rem;
+    padding: 1rem 1rem 1rem 1rem;
     background-color:#a2abb1da;
     
 }
@@ -30,7 +30,7 @@
     margin: auto;
     display:block;
     align-items: center;
-    padding: 1rem;
+    padding:  1rem 1rem 1rem 1rem;
     border: 5px solid white;
     width: 60%;
     border-radius: 30%;
@@ -41,7 +41,7 @@
     font-weight: 700;
     text-align: center;
     text-transform: uppercase;
-    padding: 0.8rem;
+    padding: 0.8rem 0.8rem 0.8rem 0.8rem;
     word-spacing: 0.02px;
 
 }
@@ -53,17 +53,18 @@ padding-bottom: 0.5rem;
 
 }
 .descrition{
-    font-size: 00.75rem;
+    font-size: 0.75rem;
     text-align: center;
     
-    padding: 1px 1px 1px 1px;
+    padding: 1rem 1rem 1rem 1rem;
 
 }
 
 
 .skills{
     font-size: 0.75rem;
-    text-align: center uppercase;
+    text-align: center ;
+    text-transform: uppercase;
     padding-left: 0.5rem;
     padding-right: 0.5rem;
     padding-top: 1rem;
@@ -73,8 +74,19 @@ padding-bottom: 0.5rem;
     padding-bottom: 0.5rem;
     text-align: left;
     font-size: 0.65rem;
+    font-weight: 0.65rem;
 }
 .progress-bar{
     height: 4px;
     border: 1px solid white;
+}
+
+.right-section{
+    padding: 32px 48px 32px 48px;
+}
+.right-title{
+    font-size: 1.2rem;
+    font-weight: 700;
+    padding: 0.5rem;
+    word-spacing: 1px;
 }
