--- a/style.css
+++ b/style.css
@@ -52,10 +52,9 @@
 padding-bottom: 0.5rem;
 
 }
-.descrition{
+.description{
     font-size: 0.75rem;
     text-align: center;
-    
     padding: 1rem 1rem 1rem 1rem;
 
 }
