--- a/style.css
+++ b/style.css
@@ -39,8 +39,9 @@
 .name{
     font-size: 1.2rem;
     font-weight: 700;
-    text-align: center uppercase;
+    text-align: center;
     word-spacing: 0.02px;
+    text-transform: uppercase;
     padding: 0.8rem 0.8rem 0.8rem 0.8rem; 
 
 }
