--- a/style.css
+++ b/style.css
@@ -89,3 +89,15 @@ padding-bottom: 0.5rem;
     padding: 0.5rem;
     word-spacing: 1px;
 }
+
+@media screen and (min-width: 674px) {
+    .main-content{
+        grid-template-columns:repeat(1, 1fr);
+    }
+  }
+
+  @media screen and (max-width: 630px) {
+    .main-content{
+        grid-template-columns:repeat(1, 1fr);
+    }
+  }
