--- a/style.css
+++ b/style.css
@@ -4,13 +4,14 @@
     margin: 0;
     box-sizing: border-box;
     list-style: none;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva,  Verdana, sans-serif;
 }
 .main-content{
     min-height: 1000px;
     width: 90%;
     margin: 20px auto;
     display: grid;
+   
     grid-template-columns:300px 700px;
 }
 
@@ -40,9 +41,9 @@
     font-size: 1.2rem;
     font-weight: 700;
     text-align: center;
-    word-spacing: 0.02px;
+   letter-spacing: 0.02px;
     text-transform: uppercase;
-    padding: 0.8rem 0.8rem 0.8rem 0.8rem; 
+    padding: 0.8rem; 
 
 }
 .designation{
