--- a/style.css
+++ b/style.css
@@ -16,14 +16,16 @@
 }
 
 .left-section{
+    display: grid;
     width: 300px;
+    height: 1000px;
     padding: 1rem 1rem 1rem 1rem;
     background-color:#a2abb1da;
-    
+    grid-column: 1/span2;
 }
 .right-section{
   width: 700px;
-  
+  height: 1000px;
     background-color:  #e2eaee;
     
 }
@@ -91,14 +93,7 @@ padding-bottom: 0.5rem;
     word-spacing: 1px;
 }
 
-@media screen and (min-width: 674px) {
-    .main-content{
-        grid-template-columns:repeat(1, 1fr);
-    }
-  }
 
-  @media screen and (max-width: 630px) {
-    .main-content{
-        grid-template-columns: repeat(1, 1fr);
-    }
-  }
+
+    
+    
