--- a/style.css
+++ b/style.css
@@ -11,23 +11,19 @@
     width: 90%;
     margin: 20px auto;
     display: grid;
-   
-    grid-template-columns:300px 700px;
+    grid-template-rows: 20% 80%;
+    grid-template-columns: 300px 700px;
 }
 
 .left-section{
-    display: grid;
-    width: 300px;
-    height: 1000px;
-    padding: 1rem 1rem 1rem 1rem;
-    background-color:#a2abb1da;
-    grid-column: span1;
+    grid-area: 1/1/3/2;
+    grid-column: span 1;
+    background-color: #9594e9ba;
+    padding: 1rem;
 }
 .profile-image{
     margin: auto;
     display:block;
-    align-items: center;
-    padding:  1rem 1rem 1rem 1rem;
     border: 5px solid white;
     width: 60%;
     border-radius: 30%;
@@ -39,7 +35,8 @@
     text-align: center;
    letter-spacing: 0.02px;
     text-transform: uppercase;
-    padding: 0.8rem; 
+    padding: 0.8rem;
+    color: #070606; 
 
 }
 .designation{
@@ -47,12 +44,14 @@
     text-align: center;
     text-transform: uppercase;
 padding-bottom: 0.5rem;
+color: #070606;
 
 }
 .description{
     font-size: 0.75rem;
     text-align: center;
-    padding: 1rem 1rem 1rem 1rem;
+    padding: 1rem;
+    color: #070606;
 
 }
 
@@ -74,19 +73,18 @@ padding-bottom: 0.5rem;
 }
 .progress-bar{
     height: 5px;
-    border: 2px solid rgb(10, 10, 10);
+    border: 2px solid rgb(10, 8, 8);
 }
 
 .right-section{
-    min-height: 1000px;
-    width: 700px;
-  grid-column: span1/span2;
-      background-color:  #e2eaee;
+   grid-column: span 1 / span 2;
+   background-color: #c6e8f8;
+   
       
   }
 
 .right-main-content{
-    padding: 32px 48px 32px 48px;
+    padding: 32px 48px;
 }
 .right-title{
     text-transform: uppercase;
@@ -95,8 +93,8 @@ padding-bottom: 0.5rem;
     padding: 0.5rem;
     letter-spacing: 1px;
 }
-@media screen and (max-width:600px){
-    .main_content{
+@media screen and (max-width:673px){
+    .main-content{
         grid-template-columns: repeat(1,1fr);
         
         
